# AtlasWeb

./: Cargo.toml
src/: lib.rs
src/exchange/: asset.rs  exchange.rs  mod.rs
src/manager/: manager.rs  mod.rs
src/standard/: array.rs  error.rs  macros.rs  mod.rs  test.rs  time.rs  types.rs
tests/exchanges/exchange1/: asset1.csv  asset2.csv
