[package]
name = "atlas_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
csv = "1.3.0"
nalgebra = "0.32.4"
thiserror = "1.0.58"
serde =  { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
